Create portal to show modals on creating new bookings

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="modal"></div>
+    <div id="portal-container"></div>
   </body>
 </html>
