Modify the datagrid columns

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       }
     </style>
 
-    <title>React App</title>
+    <title>Business Cloud</title>
   </head>
   <body>
     <div id="root"></div>
