Made the viewer work

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       }
     </style>
 
+
+      <link href="https://kendo.cdn.telerik.com/2022.3.913/styles/kendo.common.min.css" rel="stylesheet" />
+      <link href="https://kendo.cdn.telerik.com/2022.3.913/styles/kendo.blueopal.min.css" rel="stylesheet" />
+
     <title>Business Cloud</title>
   </head>
   <body>
