--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
 
-    <link rel="icon" type="image/png" href="./favicon1.png" />
+    <link rel="icon" type="image/png" href="./favicon.ico" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
